Mutil language Home

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@model BusinessLogic.Dtos.Home.HomeResponse﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using BusinessLogic.Constants.Application
+@model BusinessLogic.Dtos.Home.HomeResponse﻿
+@inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = Localizer["Home"]; 
     var httpContext = ViewContext.HttpContext;
     string appDomain = $"{httpContext.Request.Scheme}://{httpContext.Request.Host}";
 }
@@ -11,10 +14,10 @@
         <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
         <div class="container">
             <div class="banner_content text-center">
-                <h6>Away from monotonous life</h6>
-                <h2>Relax Your Mind</h2>
-                <p>If you are looking at blank cassettes on the web, you may be very confused at the<br> difference in price. You may see some for as low as $.17 each.</p>
-                <a href="#" class="btn theme_btn button_hover">Get Started</a>
+                <h6>@Localizer["HomeTitle1"]</h6>
+                <h2>@Localizer["HomeTitle2"]</h2>
+                <p>@Localizer["HomeText1"]</p>
+                <a href="#" class="btn theme_btn button_hover">@Localizer["HomeText2"]</a>
             </div>
         </div>
     </div>
@@ -22,7 +25,7 @@
         <div class="container">
             <div class="hotel_booking_table">
                 <div class="col-md-3">
-                    <h2>Book<br> Your Room</h2>
+                    <h2>@Localizer["HomeText3"]</h2>
                 </div>
                 <div class="col-md-9">
                     <div class="boking_table">
@@ -88,12 +91,13 @@
     </div>
 </section>
 <!--================Banner Area =================-->
+
 <!--================ Accomodation Area  =================-->
 <section class="accomodation_area section_gap">
     <div class="container">
         <div class="section_title text-center">
-            <h2 class="title_color">Hotel Accomodation</h2>
-            <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast, </p>
+            <h2 class="title_color">@Localizer["HotelAccomodation"]</h2>
+            <p>@Localizer["HomeText4"]</p>
         </div>
         <div class="row mb_30">
             @foreach (var item in Model.RoomTypes)
@@ -102,7 +106,7 @@
                     <div class="accomodation_item text-center">
                         <div class="hotel_img">
                             <img src="@appDomain@item.Image" width="263px" height="270px" alt="post">
-                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                            <a href="#" class="btn theme_btn button_hover">@Localizer["BookNow"]</a>
                         </div>
                         <a href="#"><h4 class="sec_h4">@item.Name</h4></a>
                     </div>
@@ -118,44 +122,44 @@
     </div>
     <div class="container">
         <div class="section_title text-center">
-            <h2 class="title_w">Royal Facilities</h2>
-            <p>Who are in extremely love with eco friendly system.</p>
+            <h2 class="title_w">@Localizer["RoyalFacilities"]</h2>
+            <p>@Localizer["HomeText5"]</p>
         </div>
         <div class="row mb_30">
             <div class="col-lg-4 col-md-6">
                 <div class="facilities_item">
-                    <h4 class="sec_h4"><i class="lnr lnr-dinner"></i>Restaurant</h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                    <h4 class="sec_h4"><i class="lnr lnr-dinner"></i>@Localizer["Restaurant"]</h4>
+                    <p>@Localizer["HomeText6"]</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="facilities_item">
-                    <h4 class="sec_h4"><i class="lnr lnr-bicycle"></i>Sports CLub</h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                    <h4 class="sec_h4"><i class="lnr lnr-bicycle"></i>@Localizer["SportsCLub"]</h4>
+                    <p>@Localizer["HomeText7"]</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="facilities_item">
-                    <h4 class="sec_h4"><i class="lnr lnr-shirt"></i>Swimming Pool</h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                    <h4 class="sec_h4"><i class="lnr lnr-shirt"></i>@Localizer["SwimmingPool"]</h4>
+                    <p>@Localizer["HomeText8"]</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="facilities_item">
-                    <h4 class="sec_h4"><i class="lnr lnr-car"></i>Rent a Car</h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                    <h4 class="sec_h4"><i class="lnr lnr-car"></i>@Localizer["RentACar"]</h4>
+                    <p>@Localizer["HomeText9"]</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="facilities_item">
-                    <h4 class="sec_h4"><i class="lnr lnr-construction"></i>Gymnesium</h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                    <h4 class="sec_h4"><i class="lnr lnr-construction"></i>@Localizer["Gymnesium"]</h4>
+                    <p>@Localizer["HomeText10"]</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="facilities_item">
-                    <h4 class="sec_h4"><i class="lnr lnr-coffee-cup"></i>Bar</h4>
-                    <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                    <h4 class="sec_h4"><i class="lnr lnr-coffee-cup"></i>@Localizer["Bar"]</h4>
+                    <p>@Localizer["HomeText11"]</p>
                 </div>
             </div>
         </div>
@@ -168,9 +172,9 @@
         <div class="row">
             <div class="col-md-6 d_flex align-items-center">
                 <div class="about_content ">
-                    <h2 class="title title_color">About Us <br>Our History<br>Mission & Vision</h2>
-                    <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
-                    <a href="#" class="button_hover theme_btn_two">Request Custom Price</a>
+                    <h2 class="title title_color">@Localizer["HomeText12"]</h2>
+                    <p>@Localizer["HomeText13"]</p>
+                    <a href="#" class="button_hover theme_btn_two">@Localizer["RequestCustomPrice"]</a>
                 </div>
             </div>
             <div class="col-md-6">
@@ -184,8 +188,8 @@
 <section class="testimonial_area section_gap">
     <div class="container">
         <div class="section_title text-center">
-            <h2 class="title_color">Testimonial from our Clients</h2>
-            <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from </p>
+            <h2 class="title_color">@Localizer["HomeText14"]</h2>
+            <p>@Localizer["HomeText15"] </p>
         </div>
         <div class="testimonial_slider owl-carousel">
             <div class="media testimonial_item">
@@ -252,8 +256,8 @@
 <section class="latest_blog_area section_gap">
     <div class="container">
         <div class="section_title text-center">
-            <h2 class="title_color">Latest Posts From Blog</h2>
-            <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from </p>
+            <h2 class="title_color">@Localizer["HomeText16"]</h2>
+            <p>@Localizer["HomeText17"] </p>
         </div>
         <div class="row mb_30">
             @foreach (var item in Model.News)
