--- a/WebApp/Views/Room/RoomDetails.cshtml
+++ b/WebApp/Views/Room/RoomDetails.cshtml
@@ -235,22 +235,29 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="reply-btn">
-                                <a href="" class="btn-reply text-uppercase">reply</a>
-                            </div>
                         </div>
                     </div>
                 }
+                <div class="form-group">
+                    <input type="hidden" id="hidRId" value="0" />
+                    <input type="hidden" id="CommentId" value=@appDomain@comment.Id />
+                    <textarea class="form-control mb-10" rows="5" id="txtReplyContent" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
+                </div>          
+                <div class="reply-btn">
+                    <button class="btn-reply text-uppercase">reply</button>
+                </div>
             }
         </div>
 
         <div class="comment-form">
             <h4>Leave a Reply</h4>
-            <form>
+            <form id="formMaintainance">
                 <div class="form-group">
-                    <textarea class="form-control mb-10" rows="5" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
+                    <input type="hidden" id="hidId" value="0" />
+                    <input type="hidden" id="RoomId" value=@appDomain@Model.Room.Id />
+                    <textarea class="form-control mb-10" rows="5" id="txtContent" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
                 </div>
-                <button class="primary-btn button_hover">Post Comment</button>
+                <button class="primary-btn button_hover btn-postComment">Post Comment</button>
             </form>
         </div>
     </div>
